Hotfix: add deps to .cabal file

--- a/termo/termo.cabal
+++ b/termo/termo.cabal
@@ -26,6 +26,9 @@ source-repository head
 library
   exposed-modules:
       Lib
+      GameManager
+      Input
+      Validators
   other-modules:
       Paths_termo
   hs-source-dirs:
