--- a/termo/termo.cabal
+++ b/termo/termo.cabal
@@ -25,9 +25,9 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
       GameManager
       Input
+      Lib
       Validators
   other-modules:
       Paths_termo
@@ -35,7 +35,7 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      base >=4.7 && <5, random
   default-language: Haskell2010
 
 executable termo-exe
