--- a/termo/package.yaml
+++ b/termo/package.yaml
@@ -21,6 +21,10 @@ description:         Please see the README on GitHub at <https://github.com/Doug
 
 dependencies:
 - base >= 4.7 && < 5
+- directory
+- random
+- bytestring
+- http-conduit
 
 ghc-options:
 - -Wall
